# claude-skills-library

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  imagemagick-expert.skill  pyproject.toml  sox-expert.skill
agents/: business-analyst.md  code-reviewer-bug-hunter.md  code-reviewer-clean-code-expert.md  code-reviewer-tdd-expert.md  code-reviewer-veteran-engineer.md  critical-reviewer-customer.md  critical-reviewer-developer.md  critical-reviewer-ops.md  critical-reviewer-pm.md  critical-reviewer-qa.md  critical-reviewer-security.md  design-implementation-reviewer.md  document-reviewer-customer.md  document-reviewer-developer.md  document-reviewer-ops.md  document-reviewer-pm.md  document-reviewer-qa.md  document-reviewer-security.md  meeting-minutes-writer.md  migration-validation-explorer.md  project-plan-creator.md  vendor-estimate-creator.md  vendor-estimate-reviewer.md  vendor-rfq-creator.md
ai-adoption-consultant/: SKILL.md
codex-reviewer/: SKILL.md
commands/: clarify.md  critical-code-reviewer.md  critical-document-reviewer.md  critical-review.md
data-visualization-expert/: CHANGELOG.md  SKILL.md
demo-data-analysis/: .gitignore  DEMO_EXECUTION_GUIDE.md  PROJECT_PLAN.md  README.md
design-implementation-reviewer/: SKILL.md
docs/: Gemfile  _config.yml  claude-code-windows-installation-guide-ja.md  data_analysis_skills_agents_best_practices.md  index.md
docs/en/: index.md  (+2 more)
fsi-slide-studio/: .env.example  CLAUDE.md  DESIGN.md  Dockerfile  README.md  app.py  render.yaml  requirements.txt
hooks/: README.md  (+2 more)
(+1398 files in other folders)
